--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,8 @@
     <!-- endbuild -->
 
         <!-- build:js scripts/main.js -->
-        <script src="scripts/main.js"></script>
+        <script src="scripts/state.js"></script>
+        <script src="scripts/duckService.js"></script>
         <!-- endbuild -->
 </body>
 </html>
