Add the animated duck.

--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,8 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
+    <img id="duck" src="Chicken-dancing.gif" alt="It's not a duck, really...">
+
     <div class="hero-unit">
       <h1>WebSockets workshop!</h1>
       <ul id="chat">
@@ -36,6 +38,7 @@
 
         <!-- build:js scripts/main.js -->
         <script src="scripts/main.js"></script>
+        <script src="scripts/duck-animation.js"></script>
         <!-- endbuild -->
 </body>
 </html>
