--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
 
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/scoreboard.css">
     <!-- endbuild -->
 
   </head>
@@ -31,13 +32,18 @@
       <input id="message" type="text" placeholder="Type something"/>
     </div>
 
+    <div id="scoreboard-container"></div>
+
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
+    <script src="../bower_components/lodash/lodash.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js scripts/main.js -->
-        <script src="scripts/main.js"></script>
+        <script src="scripts/state.js"></script>
+        <script src="scripts/duckService.js"></script>
+        <script src="scripts/scoreboard.js"></script>
         <script src="scripts/duck-animation.js"></script>
         <!-- endbuild -->
 </body>
