--- a/app/index.html
+++ b/app/index.html
@@ -17,20 +17,18 @@
     <link rel="stylesheet" href="styles/scoreboard.css">
     <!-- endbuild -->
 
+  <style>
+    html,body {
+      height: 100%;
+    }
+  </style>
   </head>
-  <body>
+  <body onclick="event.stopPropagation(); duckService.miss()">
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <img id="duck" src="Chicken-dancing.gif" alt="It's not a duck, really...">
-
-    <div class="hero-unit">
-      <h1>WebSockets workshop!</h1>
-      <ul id="chat">
-      </ul>
-      <input id="message" type="text" placeholder="Type something"/>
-    </div>
+    <img id="duck" onclick="event.stopPropagation(); duckService.hit()" src="Chicken-dancing.gif" alt="It's not a duck, really...">
 
     <div id="scoreboard-container"></div>
 
